2003-07-31  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Prepare for 0.5.

2003-07-31  Jordi Mallach  <jordi@sindominio.net>

	* src/sj-main.c: Add a missing shortcut.

2003-07-31  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Add a missing shortcut.

	* src/sj-main.c:
	Fix a typo.

2003-07-30  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	On End Of Stream, set the pipe line to NULL instead of READY so
	that all of the data is flushed. I hope.
	
2003-07-30  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	When editing the album name/title, propogate the change to the
	tracks. Thanks to Mike Hearn again.
	
2003-07-30  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Make the album title and artist fields GtkEntrys

	* src/sj-main.c:
	Handle editing the album title and artist fields. If the artist is
	changed, change the track artists too.

	Thanks to Mike Hearn for doing this patch.

	* Makefile.am:
	Ignore the scrollkeeper files left after uninstall so that
	distcheck works.

2003-07-29  Ross Burton  <ross@burtonini.com>

	* help/*:
	Added online help files.

	* Makefile.am:
	* configure.in:
	Include the help files in the build and dist.

	* src/Makefile.am:
	Add more path defines.
	* src/sj-about.c:
	Credit Mike Hearn for documentation.
	* src/sj-main.c:
	Add callback for Help, construct the GnomeProgram correctly and
	fixup glade path.

	* sound-juicer.spec.in:
	Build-depend on ScrollKeeper.
	
	All of this is from Mike Hearn, closing #116914.

2003-07-29  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in:
	Add product name as per the HIG. Thanks to Mike Hearn for
	noticing. Closes #116925.

2003-07-07  Bastien Nocera  <hadess@hadess.net>

	* configure.in: upd for libbacon update
	* src/Makefile.am:
	* src/bacon-cd-selection.c:
	* src/cd-drive.c:
	* src/cd-drive.h: ditto

2003-07-04 Christian Schaller <Uraeus@gnome.org>

	* Makefile.am, sound-juicer.spec.in