@@ -1,3 +1,14 @@
+2003-08-01  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extracting.c:
+	Fix a warning if actual track length is greater than the reported
+	length.
+	
+	* src/sj-extractor.c:
+	Use lowercase metadata tag names to work better with GStreamer.
+
+	Thanks to Bastien again.
+
 2003-07-31  Ross Burton  <ross@burtonini.com>
 
 	* configure.in:
